# tools

./: .gitignore  .yamllint.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  prek.toml  renovate.json
.github/release/: release-please-config.json
.github/workflows/: ci-cd.yml  renovate.yml
app/: Makefile  main.rs
app/cli/: mod.rs
app/config/: mod.rs
app/ui/: app.rs  event_handler.rs  mod.rs  state.rs  tree_builder.rs  views.rs
copilot/instructions/: create-instructions.md
docker/fastapi/: .dockerignore  Dockerfile
docker/nuxt/: .dockerignore  Dockerfile
docker/vue/: .dockerignore  Dockerfile
docs/: .vitepressrc.json  getting-started.md  index.md  shell-tools.md  testing-and-quality.md
docs/app/: cli.md
docs/docker/: docker-templates.md
docs/makefiles/: makefile-fragments.md
makefiles/: fastapi.mk  nuxt.mk  vue.mk
shell/: gh-detect-bots.sh  gh-purge-actions.sh  gh-purge-tags.sh  git-backup-repos.sh  git-clean-repo.sh  git-detect-bots.sh  git-maintain-github.sh  git-scan-secrets.sh  purge-gh-actions.sh  purge-gh-release.sh
shell/github/: backup-repos.sh  clean-repo.sh  detect-bots.sh  maintain-all.sh  purge-actions.sh  purge-packages.sh  purge-release.sh  purge-tags.sh  scan-secrets.sh
tests/: gh-purge-actions.bats  gh-purge-release.bats  gh-purge-tags.bats  git-backup-repos.bats  git-clean-repo.bats  git-detect-bots.bats  git-maintain-github.bats  git-scan-secrets.bats
tests/github/: backup-repos.bats  clean-repo.bats  detect-bots.bats  maintain-all.bats  purge-actions.bats  purge-packages.bats  purge-release.bats  purge-tags.bats  (+1 more)
