[package]
name = "devkit"
version = "0.3.0"
edition = "2021"
authors = ["Kevin De Benedetti"]
description = "A tool to configure web projects by stack"
license = "MIT"
repository = "https://github.com/kevindebenedetti/devkit"
homepage = "https://github.com/kevindebenedetti/devkit"

[[bin]]
name = "devkit"
path = "src/main.rs"

[dependencies]
# Interface TUI
ratatui = "0.30"
crossterm = "0.29.0"

# CLI
clap = { version = "4.5.60", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

[profile.release]
opt-level = 3          # Maximum optimization
lto = true             # Link Time Optimization
codegen-units = 1      # Better optimization (slower compilation)
strip = true           # Strip debug symbols
panic = "abort"        # Reduce binary size
